test-suite/tests/fail/ui/states/undeclared_assign.stderr
error: assigned state is not declared
 --> tests/fail/ui/states/undeclared_assign.rs:8:21
  |
8 |     #[stated(assign(B))]
  |                     ^
